2013-08-21  Paul Eggert  <eggert@cs.ucla.edu>

	* process.c (allocate_pty) [PTY_OPEN]: Set fd's FD_CLOEXEC flag.
	We can't portably rely on PTY_OPEN doing that, even if
	it calls posix_openpt with O_CLOEXEC.

2013-03-11  Glenn Morris  <rgm@gnu.org>

	* Version 24.3 released.

2013-03-05  Paul Eggert  <eggert@cs.ucla.edu>

	Fix a build failure on OpenBSD 4.x and MirBSD (Bug#13881).
	* sysdep.c (list_system_processes)
	[BSD_SYSTEM && !DARWIN_OS && !__FreeBSD__]:
	Make it a stub in this case; otherwise the build might fail,
	and this code hasn't been tested on such hosts anyway.
	Problem reported by Nelson H. F. Beebe in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-03/msg00021.html>
	and analyzed by Jérémie Courrèges-Anglas in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-03/msg00062.html>.

2013-03-02  Andreas Schwab  <schwab@linux-m68k.org>

	* lisp.h (XPNTR) [!USE_LSB_TAG]: Remove extra paren.  (Bug#13734)

2013-02-27  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (sys_open): Don't reset the flags for FD in fd_info[].
	(Bug#13546).

2013-02-24  Andreas Schwab  <schwab@linux-m68k.org>

	* xdisp.c (set_message): Only check for debug-on-message if STRING
	is a string.  (Bug#13797)

2013-02-24  Paul Eggert  <eggert@cs.ucla.edu>

	Fix regression introduced by July 10 filelock.c patch.
	* filelock.c (fill_in_lock_file_name): Fix crash caused by the
	2012-07-10 patch to this file.  Reported by Eli Zaretskii in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-02/msg00533.html>
	and diagnosed by Andreas Schwab in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-02/msg00534.html>.

2013-02-18  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c (new_child): Avoid leaking handles if the subprocess
	resources were not orderly released.

2013-02-17  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c (new_child): Remove the loop that attempted to salvage
	slots of dead processes.
	(new_child, delete_child, find_child_pid): Don't insist on